--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     <input type="text" [(ngModel)]="user.username" id="username" name="username">
     <label for="password">Password:</label>
     <input type="password" [(ngModel)]="user.password" id="password" name="password">
-    <input type="submit"  (click)="formSubmit()" value="Login">
+    <input type="submit" value="Login">
   </form>
   <p>Don't have an account? <a (click)="goToRegisterPage()">Register</a></p>
   <a  (click)="goToHomePage()">Home</a>
