--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,4 +1,3 @@
-
 /* Reset default browser styles */
 * {
     margin: 0;
@@ -73,10 +72,6 @@
     padding: 1rem;
     width: 100%;
     text-align: center; /* Center footer content */
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-
   }
   
   .footer-content {
@@ -98,3 +93,32 @@
     font-size: 2rem;
     margin: 0;
   }
+  
+  /* Navigation bar styles */
+  nav {
+    display: flex;
+    align-items: center;
+  }
+  
+  nav ul {
+    display: flex;
+    list-style: none;
+  }
+  
+  nav ul li {
+    margin-right: 1.5rem;
+  }
+  
+  nav ul li:last-child {
+    margin-right: 0;
+  }
+  
+  nav ul li a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  nav ul li a:hover {
+    text-decoration: underline;
+  }
+  
