--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,23 +1,23 @@
 <div class="register-container">
     <h1>Register</h1>
-    <form>
+    <form (ngSubmit)="formSubmit()">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" [(ngModel)]="user.name" id="name" name="name" required>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" [(ngModel)]="user.email" id="email" name="email" required>
 
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" [(ngModel)]="user.username" id="username" name="username" required>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" [(ngModel)]="user.password" id="password" name="password" required>
 
         <label for="confirm-password">Confirm Password:</label>
-        <input type="password" id="confirm-password" name="confirm-password" required>
-
+        <input type="password" [(ngModel)]="verifypassword" id="confirm-password" name="confirm-password" required>
+        
         <label for="role">Role:</label>
-        <select id="role" name="role" required>
+        <select id="role" [(ngModel)]="user.role" name="role" required>
             <option value="" disabled selected>Select role...</option>
             <option value="user">User</option>
             <option value="admin">Admin</option>
